--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Assets\Scripts\FadePanel.cs" />
      <Compile Include="Assets\Assets\Scripts\ScrollButtons.cs" />
      <Compile Include="Assets\Assets\Scripts\ShowSquare.cs" />
+     <Compile Include="Assets\Assets\Scripts\SlideTraveller.cs" />
      <Compile Include="Assets\Libraries\UITween\Prefabs\Click Effect Pref\ClickedWaveAnimation.cs" />
      <Compile Include="Assets\Libraries\UITween\ScenesExamplesScripts\ActivateOnEnable.cs" />
      <Compile Include="Assets\Libraries\UITween\ScenesExamplesScripts\CreateAnimImage.cs" />
